src/index.css
@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&family=VT323&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Edu+AU+VIC+WA+NT+Hand:wght@400..700&family=Press+Start+2P&family=VT323&display=swap");
@import url("https://fonts.cdnfonts.com/css/agustina");

body {
  margin: 0;
  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif; */
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  /* scrollbar-color: #000 rgb(30, 30, 33); */
  background: var(--body-dark) !important;
  min-height: 100% !important;
  display: flex;
  flex-grow: 1;
  font-family: var(--ff-poppins);
}

.body-dark {
  background: var(--body-dark) !important;
}

.body-light {
  background: var(--body-light) !important;
}

.icon-box-light {
  position: relative;
  border-radius: 8px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 16px;
  background: var(--card-light);
  color: var(--eerie-black-1);
  box-shadow: var(--shadow-1);
  z-index: 1;
}

.icon-box-light::before {
  content: "";
  position: absolute;
  inset: 1px;
  background: var(--card-light);
  border-radius: inherit;
  z-index: -1;
}

.icon-box-dark {
  position: relative;
  border-radius: 8px;
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 16px;
  background: var(--border-gradient-onyx);
  color: var(--wheat-yellow);
  box-shadow: var(--shadow-1);
  z-index: 1;
}

.icon-box-dark::before {
  content: "";
  position: absolute;
  inset: 1px;
  background: var(--eerie-black-1);
  border-radius: inherit;
  z-index: -1;
}

.name-light {
  color: var(--eerie-black-2);
  font-size: var(--fs-1);
  font-weight: var(--fw-600);
  letter-spacing: -0.25px;
  margin-bottom: 10px;
}

.name-dark {
  color: var(--text-dark);
  font-size: var(--fs-1);
  font-weight: var(--fw-600);
  letter-spacing: -0.25px;
  margin-bottom: 10px;
}

.separator {
  height: 1px;
  background: var(--jet);
  margin: 16px;
}

.contacts-list {
  display: grid;
  grid-template-columns: 1fr;
  gap: 16px;
  padding: 20px !important;
}

.contact-item {
  min-width: 100%;
  display: flex;
  align-items: center;
  gap: 16px;
  overflow: hidden;
}

.title-light {
  color: var(--text-light);
  background: #EBDAC6;
  font-size: var(--fs-8);
  font-weight: var(--fw-300);
  width: max-content;
  padding: 3px 12px;
  border-radius: 8px;
  padding: 5px 18px;
  /* color: var(--light-gray); */
  font-size: var(--fs-7);
  font-weight: var(--fw-500);
  line-height: 1.4;
}

.title-dark {
  color: var(--text-dark);
  background: var(--onyx);
  font-size: var(--fs-8);
  font-weight: var(--fw-300);
  width: max-content;
  padding: 3px 12px;
  border-radius: 8px;
  padding: 5px 18px;
  /* color: var(--light-gray); */
  font-size: var(--fs-7);
  font-weight: var(--fw-500);
  line-height: 1.4;
}

.contact-info {
  max-width: calc(100% - 46px);
  width: calc(100% - 46px);
}

.contact-title-light {
  color: #05263B;
  font-size: var(--fs-8);
  text-transform: uppercase;
  margin-bottom: 2px;
  margin-top: 0px;
}

.contact-title-dark {
  color: var(--light-gray-70);
  font-size: var(--fs-8);
  text-transform: uppercase;
  margin-bottom: 2px;
  margin-top: 0px;
}

.contact-info-light :is(.contact-link, time, address) {
  color: var(--text-light);
  font-size: var(--fs-7);
}

.contact-info-light address {
  font-style: normal;
}

.contact-info-dark :is(.contact-link, time, address) {
  color: var(--text-dark);
  font-size: var(--fs-7);
}

.contact-info-dark address {
  font-style: normal;
}

#root {
  min-height: 100%;
  min-width: 100%;
}

html {
  min-height: 100%;
  display: flex;
}

#project {
  height: 100%;
  display: flex;
  flex-direction: column;
}

.aaa {
  height: 100%;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

#phaser-container {
  overflow: hidden;
}

.press-start-2p-regular {
  font-family: "Press Start 2P", system-ui;
  font-weight: 400;
  font-style: normal;
}

.navbar-light {
  background-color: var(--card-light) !important;
}

.navbar-dark {
  background-color: var(--card-dark) !important;
}

.icon-set {
  display: flex;
  flex-wrap: wrap;
  margin: 40px;
  margin-top: 0%;
  justify-content: center;
}

.logo-name-light {
  color: var(--text-light);
  font-family: "Agustina", sans-serif;
  font-weight: 500;
  font-size: x-large;
}

.logo-name-dark {
  color: var(--text-dark);
  font-family: "Agustina", sans-serif;
  font-weight: 500;
  font-size: x-large;
}

#resume {
  display: flex;
  min-height: 100%;
  max-height: 100%;
}

#info {
  min-height: 100%;
  max-height: 100%;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.9);
  border-radius: 20px;
  z-index: 1;
}

.info-light {
  background-color: var(--card-light);
  border: 0.1px solid #bdbdbd;
}

.info-dark {
  background-color: var(--card-dark);
  border: 0.1px solid rgb(40, 40, 43);
}

#content {
  min-height: 100%;
  max-height: 100%;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.9);
  display: flex;
  flex-direction: column;
  border-radius: 20px;
  z-index: 1;
  color: var(--light-gray);
  font-size: var(--fs-6);
  font-weight: var(--fw-300);
  line-height: 1.6;
}

.content-light {
  background-color: var(--card-light);
  border: 0.1px solid #bdbdbd;
}

.content-dark {
  background-color: var(--card-dark);
  border: 0.1px solid rgb(40, 40, 43);
}

.primary-tab-light {
  border-color: rgb(30, 30, 33) !important;
  color: rgb(30, 30, 33) !important;
}

.primary-tab-dark {
  color: "amber[50]" !important;
}

.secondary-tab-light {
  border-color: rgb(30, 30, 33) !important;
  color: rgb(30, 30, 33) !important;
  /* filter: invert(1); */
}

.secondary-tab-dark {
  color: "amber[50]" !important;
}
/* ... */

